resources/sass/layout/_header.scss
@charset "UTF-8";

$header-height: 56px;

// odstep potrzebny z uwagi na klase .navbar-fixed-top ktora powoduje iz menu jest przyklejone do gornej krawedzi
body.padding-top {
  padding-top: $header-height;
}

:root {
  --header-navbar-bg: url('/img/background.png') repeat;
  --header-color: #3c3c3c;
  --header-hover-color: #454545;
  --header-active-bg: #e7e7e7;
  --header-search-bg: #{$white};
  --header-search-border: #ccc;
}

.navbar-dark {
  --header-navbar-bg: #454545;
  --header-color: #eee;
  --header-hover-color: #{$primary};
  --header-active-bg: #454545;
  --header-group-link-color: #9d9d9d;
  --header-search-bg: #{$gray-light};
  --header-search-border: transparent;
}

// Gorny, zielony pasek wyswietlany na samej gorze ekranu
// --------------------------------------------------------------
.navbar-border-top {
  background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAJ0lEQVQIW2Ps3MD5n0+AlQEEPn34zcA4/QDffxADBEASmALIWkCqAPDNEnJoA/jxAAAAAElFTkSuQmCC');
  border-bottom: 1px solid #888;
  height: 5px;
}

.navbar-brand {
  margin: 0; // no default margin
}

.navbar-toggler {
  border: 0;
  padding: $navbar-toggler-padding-y $navbar-toggler-padding-x $navbar-toggler-padding-y 0;
  outline: none !important;
}

.navbar {
  border-bottom: 1px solid lighten($border-color, 2%);

  .badge {
    position: absolute;
    background-color: #FF4A00;
    font-size: 10px;
    border-radius: 5px;
    overflow: inherit;
    text-overflow: inherit;
    max-width: 100%;
    color: #fff;
    top: -9px;
    right: -1px;
  }

  .dropdown-menu {
    margin-top: -1px; // there is no space between navbar and menu
  }
}

.navbar-nav {
  .dropdown-container {
    display: none;
    padding-top: 5px;
    position: absolute;
    top: 100%;
    z-index: 100;

    .dropdown-menu {
      display: block;
      position: static;

      &:after, &:before {
        bottom: calc(100% - 5px);
      }
    }
  }

  .dropdown:hover > .dropdown-container {
    display: block;
  }
}

// Glowne menu aplikacji. Po naprowadzeniu kursora myszy nad pozycja pokazujemy liste podmenu
// ---------------------------------------------------------------------------------------

%menu-link {
  color: var(--header-color);
  display: block;
  text-decoration: none;
  font-family: "Open Sans", Arial, sans-serif;
  font-size: .81rem;

  &:hover,
  &:focus {
    color: var(--header-hover-color);
    background-color: var(--header-active-bg);
  }
}

.search-dropdown {
  position: absolute;
  display: none;
  border: 1px solid $border-color;
  box-shadow: $dropdown-box-shadow;
  width: 100%;
  background-color: #fff;
  left: 0;
  top: -1px;
  margin-top: 32px;

  .item-options {
    position: absolute;
    right: 10px;
    display: none;

    i {
      color: $text-muted;
    }
  }

  li {
    &.hover {
      background-color: $dropdown-link-hover-bg;

      .item-options {
        display: inline;
      }
    }

    > a {
      padding: 5px 10px;
      display: block;
      color: $gray-800;

      &:hover {
        text-decoration:  none;
        color: inherit;
      }
    }
  }

  .title {
    font-size: .7rem;
    margin: 5px 10px;
    color: #777;
    text-transform: lowercase;
    background: linear-gradient(to bottom, #ffffff 47%, #b4b4b4 50%, #ffffff 52%);

    > span {
      background-color: #fff;
      display: inline-block;
      padding: 2px 10px 2px 0;
    }
  }

  .more {
    padding: 0;
    font-size: .7rem;

    a {
      color: $text-muted;
    }
  }

  .forum-name {
    font-size: .65rem;
  }
}

.nav-search {
  width: 100%;
  align-items: center;
  display: flex;

  .search-bar {
    display: flex;
    align-items: center;
    width: 100%;
    height: 35px;
    position: relative;
    border-radius: 3px;
    padding: 5px;
    background-color: var(--header-search-bg);
    border: 1px solid var(--header-search-border);

    // temp code
    &:after {
      content: 'Beta';
      position: absolute;
      right: 25px;
      top: 30%;
      text-transform: uppercase;
      font-size: 10px;
      color: var(--header-color);
    }
  }

  .fa-search {
    color: var(--header-color);
  }

  input {
    background-color: var(--header-search-bg);
    padding: 0;
    color: var(--header-color);
    width: 100%;
    line-height: 22px;
    outline: 0;
    font-size: .8rem;
    border: none;
  }

  .search-bar-active {
    &.search-bar {
      background-color: #fff;

      &:after {
        display: none; // temp code
      }
    }

    .fa-search {
      color: $gray-700 !important;
    }

    .search-dropdown {
      display: block;
    }
  }
}

.nav-avatar {
  margin-left: 20px;
  display: flex;
  align-items: center; // center image vertically

  a {
    color: $gray;

    &:hover {
      text-decoration: none;
    }
  }

  img {
    background-color: #fff;
  }

  .dropdown-toggle:after {
    display: none;
  }
}

// Notifications and private messages button
// ------------------------------------------
.nav-auth {
  display: flex;
  margin-bottom: 0;
  margin-left: auto; // align to the right
  padding: 0; // no default padding

  flex-direction: unset !important; // overwrite .navbar-nav setting to show link next to each other
}

.nav-auth > li {
  position: relative;
  align-items: center; // align icons in center
  display: flex;

  > a {
    padding: 0 9px !important; // overwrite .navbar-nav setting
    display: block;
    position: relative;
    outline: none;

    i {
      font-size: 14px;
    }
  }

  .dropdown-modal {
    // nim zaladuje sie JS - pretty scrollbar, lista powiadomien wyjezdza poza okno, dlatego
    // dodalem overflow: hidden
    overflow: hidden;
  }

  @include media-breakpoint-down(sm) {
    // na urzedzeniach mobilnych okno powiadomien oraz wiadomosci prywatnych musi byc rozciagniete na cala szerokosc
    position: static;
  }
}

.btn-register {
  margin-left: 0;
  background-color: $brand-primary;
  color: #fff;

  &:hover, &:focus {
    color: #fff;
  }
}

.btn-login {
  color: var(--header-color);
}

.btn-login {
  &:hover, &:focus {
    color: $brand-primary;
  }
}

.profile-name {
  font-weight: bold !important;

  &:hover {
    background-color: transparent !important;
  }
}

.mega-menu {
  white-space: nowrap;
  padding: 5px 10px;

  .mega-menu-title {
    text-transform: uppercase;
    font-weight: bold;
    color: #464646;
    padding-bottom: 5px;

    @include text-overflow;
    max-width: 9vw;
  }

  .mega-menu-body {
    display: table-cell;
    padding: 10px;
    border-right: 1px solid $border-color;

    &:last-child {
      border-right: none;
    }
  }

  li > a {
    color: var(--header-group-link-color);
    padding: 3px 0;
    display: block;

    &:hover {
      text-decoration: none;
      color: $brand-primary;
    }
  }
}

// tymczasowy blok na "czarnej" skorki

.navbar-dark {
  .dropdown-menu:not(.dropdown-alerts):not(.dropdown-messages) {
    background-color: $dark;
    border-radius: 0 0 $border-radius-small $border-radius-small;
    box-shadow: 0 2px 2px rgba(0,0,0,.2), inset 0 4px 10px rgba(0,0,0,0.15);
    border: none;

    .dropdown-item,
    .btn-sign-out {
      color: lighten($gray-light, 15%);

      &:hover,
      &:focus {
        color: #CACACA;
        background-color: #717171;
      }
    }

    &:after, &:before {
      border: none;
    }
  }

  /////

  .dropdown-divider {
    border-top-color: $gray-light;
  }

  .mega-menu {
    .mega-menu-title {
      color: $gray-lighter;
      border-bottom: none;
      font-weight: 400;
    }

    .mega-menu-body {
      border-right-color: #575757;
    }
  }

  .nav-avatar {
    .img-thumbnail {
      background-color: #717171 !important;
      border: none;
    }
  }

  .dropdown-alerts, .dropdown-messages {
    border-top: 0;

    &:after, &:before {
      border: none;
    }
  }

  .search-bar-active {
    input {
      background-color: #fff !important;
      color: $gray-700 !important;
    }
  }

  input::placeholder {
    color: inherit;
  }

  .nav-link {
    font-weight: bold;
    font-family: Open Sans,Arial,sans-serif;
    font-size: .81rem;
  }
}

.navbar-toggle .icon-bar {
  background-color: var(--header-color);
}

////////////////////////////////////////////////////////////////

.dropdown-messages, .dropdown-alerts {
  width: 420px;
  padding: 0;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  position: absolute !important;
  right: 0;
  left: auto;
  display: block;

  .dropdown-header {
    background-color: #f8f8f8;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    overflow: hidden;
    padding: 10px !important;

    a {
      color: $gray-light;
    }
  }

  &:after {
    border-bottom-color: #f8f8f8;
  }

  @include media-breakpoint-down(sm) {
    background-color: transparent;
    border: 1px solid $border-color;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
    top: 100%; // no space between menu on mobile devices
    left: 0;
    width: 100%;
    border-radius: 0;

    .dropdown-header {
      border-radius: 0;
    }

    // DO NOT show triangle above menu (only for mobile devices)
    &:after, &:before {
      content: none;
    }
  }
}

.dropdown-modal {
  position: relative;
  background-color: #fff;
  max-height: 420px;

  .ps__rail-y {
    right: 0 !important;
    left: auto !important;
    z-index: 10;
  }

  a:hover, a:focus {
    text-decoration: none;
  }

  .notification {
    border-bottom: 1px solid $body-bg;
    position: relative; // we need this to position remove button in notification

    &:hover {
      background-color: $body-bg;

      .btn-delete-alert {
        display: block;
      }
    }

    &.unread {
      background-color: $unread-bg;

      &:hover {
        background-color: $unread-bg-hover;
      }
    }
  }

  .media-object {
    width: 35px;
    height: 35px;

    img {
      width: 100%;
    }
  }

  .notification-link {
    display: block;
    padding: 7px 6px;
  }

  .btn-delete-alert {
    position: absolute;
    right: 6px;
    top: 13px;
    padding: 6px;
    display: none;
  }

  .media-body {
    header {
      h4 {
        color: $gray-light;
        float: left;
        font-size: 11px;
        max-width: 70%;
        margin: 0;

      }

      small {
        float: right;
        color: $gray-light;
        font-size: 10px;
      }
    }

    h3 {
      font-size: .75rem;
      clear: both;
      margin: 1px 0;
      font-weight: bold;
      font-family: Arial, sans-serif;
      color: $brand-primary;
    }

    p {
      padding-right: 3px;
      margin: 0;
      color: $gray;
      clear: both;
      font-size: .75rem;
    }
  }
}

.btn-write-message {
  float: right;
  font-size: 11px;
  font-weight: normal;;
}

/* Za malo miejsca w pionie, by wyswietlac przyklejony navbar */
@include media-breakpoint-down(sm) {
  /* zostawiamy navbar na gorze strony */
  .fixed-top {
    position: absolute;
  }

  /* ukrywamy przyklejona sciezke podstrony, na ktorej sie znajdujemy */
  body .breadcrumb[id] {
    display: none;
  }
}

